[package]
name = "my-lua-bot"
version = "0.1.0"
authors = ["artyom.svyatoha <6Jyc2Pp4WY>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
actix-web = "3.0.0-beta.2"
